--- a/ourproduct.html
+++ b/ourproduct.html
@@ -46,94 +46,29 @@
        <div class="container">
          <div class="row">
            <div class="col-lg-12 text-center text-white">
-              <h2>Our Services</h2>
+              <h2>Our Product</h2>
            </div>
          </div>
        </div>
   </section>
 
     <!-- The Beginning section -->
-    <section class="thebeginningsection py-5">
-      <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon1">
-              <img src="./asset/img/strategy.svg" alt="">
-            </div>
-              <h2>Data Analytics</h2>
-              <p>Data is the oil of the digital economy, the more you mine the more you can fuel your brand. With enormous amount of user data developed from your brand’s presence in online and offliine, we can turn them into actionable insights. With proper analytics and reporting generated from Analyzen team you can get an in depth understanding of how your brand is faring as well as reaching the perfect audience who feel more affinity to your brand.</p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/the-begining.jpg" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="mt-5 py-5">
-       <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/bestintheworldculture.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon2">
-                <img src="./asset/img/analytics.svg" alt="">
+    <div class="ourworksection">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="ourprotfolio">
+                <div class="protfolio_item">
+                  <a href="#" class="itemcontent">
+                    <img src="./asset/img/lux-super-star.jpg" alt="">
+                  </a>
+                </div>
               </div>
-              <h2>Cross-media Content Development</h2>
-              <p>Seeing is believing. So, contents are the most important catalysts that create a strong brand presence. <br><br>
-                Analyzen, from day one, is well known for its content designs. Our content creators are not only creative, but also very agile and they can make impossible things possible. With the rise of dynamic contents, zero second videos and platform specific adaptations, our content creators are adaptable and always ready to deliver for any media you can think of.</p>
             </div>
           </div>
         </div>
-       </div>
-    </section>
-    <section class="mt-5 py-5">
-       <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon3">
-              <img src="./asset/img/content-dev.svg" alt="">
-              </div>
-              <h2>Web Experience</h2>
-              <p>Analyzen don't just design website also gives it life. We have a vast experience of creating interactive ideas & implementing them in website form. We believe a website is where you can create your brand equity. Also, with the rise of mobile traffic to web platforms we have mastered the art of mobile device optimization and as a result enhancing the user experience.</p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/goingglobal.jpg" alt="">
-            </div>
-          </div>
-        </div>
-       </div>
-    </section>
-    <section class="mt-5 py-5">
-       <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/our-values.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon4">
-                <img src="./asset/img/web-dev.svg" alt="">
-              </div>
-              <h2>Digital Buying</h2>
-              <p>If you are looking for a better return on your ad spend then Analyzen is the place to go. Analyzen’s team of expert buying professionals ensure creating a spot-on media buying strategy, putting it into execution and finally achieving cost optimization for better ad performance and ROI for your brands.</p>
-            </div>
-          </div>
-        </div>
-       </div>
-    </section>
+    </div>
+
   <!-- footer section -->
   <section class="footer-section">
     <canvas class="footercanvas"></canvas>
