--- a/ourwork.html
+++ b/ourwork.html
@@ -46,7 +46,7 @@
        <div class="container">
          <div class="row">
            <div class="col-lg-12 text-center text-white">
-              <h2>Our Services</h2>
+              <h2>Our Work</h2>
            </div>
          </div>
        </div>
