--- a/ourwork.html
+++ b/ourwork.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- custom link  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   <link rel="stylesheet" href="./asset/css/jquery.hislide.min.css">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -17,8 +18,15 @@
   <title>Analyzenbd</title>
 </head>
 
-<body>
-  <header>
+<body onload="dispalyload()">
+  <!-- loader start -->
+  <div id="loading">
+    <div class="loaderimg">
+      <img src="./asset/img/preloader.gif" alt="">
+    </div>
+  </div>
+  <!-- loader end -->
+  <header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark headercontent">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="./asset/img/logo.svg" alt=""></a>
@@ -30,12 +38,12 @@
           <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
             <li class="nav-item"><a href="index.html">Home</a></li>
             <li class="nav-item"><a href="aboutus.html">About Us</a></li>
-            <li class="nav-item"><a href="#">Services</a></li>
-            <li class="nav-item"><a href="#">Products</a></li>
-            <li class="nav-item"><a href="#">Our Works</a></li>
-            <li class="nav-item"><a href="#">Clients</a></li>
-            <li class="nav-item"><a href="#">Analyzers</a></li>
-            <li class="nav-item"><a href="#">Contact Us</a></li>
+            <li class="nav-item"><a href="ourservices.html">Services</a></li>
+            <li class="nav-item"><a href="ourproduct.html">Products</a></li>
+            <li class="nav-item"><a href="ourwork.html">Our Works</a></li>
+            <li class="nav-item"><a href="ourclients.html">Clients</a></li>
+            <li class="nav-item"><a href="analyzers.html">Analyzers</a></li>
+            <li class="nav-item"><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>
       </div>
@@ -43,129 +51,126 @@
   </header>
   <!-- brathcrumb section -->
   <section class="brathcramp" style="background: url('/asset/img/our-services-bg.jpg');">
-       <div class="container">
-         <div class="row">
-           <div class="col-lg-12 text-center text-white">
-              <h2>Our Work</h2>
-           </div>
-         </div>
-       </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center text-white">
+          <h2>Our Product</h2>
+        </div>
+      </div>
+    </div>
   </section>
 
-    <!-- The Beginning section -->
-    <section class="thebeginningsection py-5">
-      <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon1">
-              <img src="./asset/img/strategy.svg" alt="">
+  <!-- The Beginning section -->
+  <div class="ourworksection py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="ourprotfolio clearfix">
+            <div class="protfolio_item protfolilethight floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/lux-super-star.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
             </div>
-              <h2>Data Analytics</h2>
-              <p>Data is the oil of the digital economy, the more you mine the more you can fuel your brand. With enormous amount of user data developed from your brand’s presence in online and offliine, we can turn them into actionable insights. With proper analytics and reporting generated from Analyzen team you can get an in depth understanding of how your brand is faring as well as reaching the perfect audience who feel more affinity to your brand.</p>
+            <div class="protfolio_item protfoliletsmall floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/sunsilk-hijab-refresh.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
+            </div>
+            <div class="protfolio_item protfoliletsmall floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/sunsilk-hijab-refresh.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
             </div>
           </div>
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/the-begining.jpg" alt="">
+          <div class="ourprotfolio clearfix maginnane">
+            <div class="protfolio_item protfoliletsmall floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/sunsilk-hijab-refresh.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
+            </div>
+            <div class="protfolio_item protfoliletsmall floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/sunsilk-hijab-refresh.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
+            </div>
+            <div class="protfolio_item protfolilethight marginworkminus floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/lux-super-star.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
+            </div>
+          </div>
+          <div class="ourprotfolio clearfix">
+            <div class="protfolio_item protfolilethight floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/lux-super-star.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
+            </div>
+            <div class="protfolio_item protfoliletsmall floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/sunsilk-hijab-refresh.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
+            </div>
+            <div class="protfolio_item protfoliletsmall floadleft">
+                  <a href="protfolio.html" class="itemcontent">
+                    <img src="./asset/img/sunsilk-hijab-refresh.jpg" alt="">
+                    <h2>Lux Super Star 2018</h2>
+                    <p class="duration">March 2017 - Present</p>
+                  </a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <section class="mt-5 py-5">
-       <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/bestintheworldculture.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon2">
-                <img src="./asset/img/analytics.svg" alt="">
-              </div>
-              <h2>Cross-media Content Development</h2>
-              <p>Seeing is believing. So, contents are the most important catalysts that create a strong brand presence. <br><br>
-                Analyzen, from day one, is well known for its content designs. Our content creators are not only creative, but also very agile and they can make impossible things possible. With the rise of dynamic contents, zero second videos and platform specific adaptations, our content creators are adaptable and always ready to deliver for any media you can think of.</p>
-            </div>
-          </div>
-        </div>
-       </div>
-    </section>
-    <section class="mt-5 py-5">
-       <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon3">
-              <img src="./asset/img/content-dev.svg" alt="">
-              </div>
-              <h2>Web Experience</h2>
-              <p>Analyzen don't just design website also gives it life. We have a vast experience of creating interactive ideas & implementing them in website form. We believe a website is where you can create your brand equity. Also, with the rise of mobile traffic to web platforms we have mastered the art of mobile device optimization and as a result enhancing the user experience.</p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/goingglobal.jpg" alt="">
-            </div>
-          </div>
-        </div>
-       </div>
-    </section>
-    <section class="mt-5 py-5">
-       <div class="container">
-        <div class="row mt-4">
-          <div class="col-lg-6">
-            <div class="beginningimg">
-              <img src="./asset/img/our-values.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="beginningcontent">
-              <div class="servicesicon servicesicon4">
-                <img src="./asset/img/web-dev.svg" alt="">
-              </div>
-              <h2>Digital Buying</h2>
-              <p>If you are looking for a better return on your ad spend then Analyzen is the place to go. Analyzen’s team of expert buying professionals ensure creating a spot-on media buying strategy, putting it into execution and finally achieving cost optimization for better ad performance and ROI for your brands.</p>
-            </div>
-          </div>
-        </div>
-       </div>
-    </section>
+    </div>
+  </div>
+
   <!-- footer section -->
   <section class="footer-section">
     <canvas class="footercanvas"></canvas>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-            <div class="footercontent">
-               <div class="footrlogo">
-                   <img src="./asset/img/footer-logo.svg" alt="">
-               </div>
-               <div class="footermenu">
-                 <ul>
-                   <li><a href="#">Bangladesh</a></li>
-                   <li><a href="#">Singapore</a></li>
-                   <li><a href="#">Myanmar</a></li>
-                 </ul>
-               </div>
-               <p>Analyzen Innovation Lab</p>
-               <p>Level 1, House 1A, Road 16/A, Gulshan 1</p>
-               <p>Dhaka-1212, Bangladesh.</p>
-               <p><i class="fas fa-phone"></i>  +88-01799985368</p>
-               <p> mail@analyzenbd.com</p>
-               <div class="footersocialicon">
-                 <a href="#"><i class="fab fa-facebook"></i></a>
-                 <a href="#"><i class="fab fa-twitter"></i></a>
-                 <a href="#"><i class="fab fa-instagram"></i></a>
-                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                 <a href="#"><i class="fab fa-youtube"></i></a>
-               </div>
-               <p class="copyright mt-3">©2022 Analyzen. All rights reserved.</p>
+          <div class="footercontent">
+            <div class="footrlogo">
+              <img src="./asset/img/footer-logo.svg" alt="">
             </div>
+            <div class="footermenu">
+              <ul>
+                <li><a href="#">Bangladesh</a></li>
+                <li><a href="#">Singapore</a></li>
+                <li><a href="#">Myanmar</a></li>
+              </ul>
+            </div>
+            <p>Analyzen Innovation Lab</p>
+            <p>Level 1, House 1A, Road 16/A, Gulshan 1</p>
+            <p>Dhaka-1212, Bangladesh.</p>
+            <p><i class="fas fa-phone"></i> +88-01799985368</p>
+            <p> mail@analyzenbd.com</p>
+            <div class="footersocialicon">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+            <p class="copyright mt-3">©2022 Analyzen. All rights reserved.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -177,8 +182,14 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script src="./asset/js/index.js"></script>
   <script src="./asset/js/footer.js"></script>
- 
+
+  <script>
+    let loading = document.getElementById('loading');
+    function dispalyload() { 
+      loading.style.display = 'none';
+    }
+  </script>
 </body>
+
 </html>
